# service-mesh-cli

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
blog/: dev-to-service-mesh-cli.md
service_mesh_cli/: __init__.py  cli.py  demo.py  models.py  parser.py
service_mesh_cli/analyzers/: mesh_validator.py
service_mesh_cli/reporters/: export_reporter.py  terminal_reporter.py
tests/: conftest.py  test_analyzers.py  test_cli.py  test_models.py  test_reporters.py
